# kickstart

./: .gitignore  Cargo.toml  README.md  client.lock.json  deno.json  editor.html  mod.js  module.js  monolith.sh  package.json  pup.json  quick-start.js  quick-start.sh  server.js  server.lock.json  sidecar.js
.github/workflows/: deploy.yml  publish.yml  test-on-pr.yml  upload.yml
bindings/: bindings.ts
deprecating/: server.js
deprecating/customs/: conflict.script  hello.script  prep-and-aftermath.script  (+1 more)
home/: index.html  server.js  system.css
lib/: rs_lib.generated.js  rs_lib_bg.wasm
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs
scripts/: build.js  build.sh  install.sh  start.sh
src/: body.html  brain.js  code-module.js  head.html  main.js  slidecolors.css  tag.js
src-braid/: index.js
src-caddy/: Caddyfile
src-dropserver/: deno.json
src-edge/: deno.json  deps.js  import_map.json  index.html  main.js  mod.js
src-gun/: deno.json  package-lock.json  package.json
src-llamafile/: deno.json
src-owncast/: deno.json
src-plan98/: deno.json
src-rust9p/: deno.json
src-saas/: .env.example  fresh.config.ts
src-solid/: package-lock.json  package.json
src-statebus/: .gitignore  deno.json  index.mjs  package-lock.json  package.json
src-tag/: deno.json  mod.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
src-tunnel/: deno.json
src-ui/: deps.js  homiii.html  index.html  main.js  package-lock.json  package.json  vite.config.ts
system/: bios.js  code-module.js  devices.js  main.js  utils.js
(+186 files in other folders)
